<resources>
    <string name="app_name">ChefsHub</string>
    <string name="hub">HUB</string>
    <string name="chefs">chefs</string>
    <string name="chefs_hup">chefs Hup</string>
    <string name="welcome_to">welcome to</string>
    <string name="singup_to_see_nmore_videos">Welcome To Your Chefs Hub</string>
    <string name="hi_and">Hi, and</string>
    <string name="welcome">welcome to</string>
    <string name="your_email_or_your_phone">Your email or your phone</string>
    <string name="password">Password</string>
    <string name="forget">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="Signup">Signup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pref">PrefActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_your_n_favorite_food">Select your \nfavorite style</string>
    <string name="select_your_n_favorite_cuisine">Select your \nfavorite cuisine</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="checkout">Checkout</string>
    <string name="address_1">ADDRESS #1</string>
    <string name="default_notification_channel_id">defualt notifications</string>
    <!--    <string name="facebook_app_id" translatable="false">3363028827345538</string>-->
    <!--    <string name="facebook_client_token" translatable="false">fb3363028827345538</string>-->
    <string name="follow">Follow</string>
    <string name="comments">\" comments\"</string>
    <string name="add_comment">Add comment ...</string>
    <string name="following">Following</string>
    <string name="gridView">GridView</string>
    <string name="savedVideo">Saved video</string>
    <string name="listView">ListVIew</string>
    <string name="settings">Settings</string>
    <string name="post">Post</string>
    <string name="message">message</string>
    <string name="profile">Profile</string>
    <string name="facebook_app_id">499828035586595</string>
    <string name="fb_login_protocol_scheme">fb499828035586595</string>
    <string name="facebook_client_token">b205d124f01723e1f14fd767201e32e9</string>
    <string name="add_to_basket">Add to saved</string>
    <string name="skip">skip</string>
    <string name="logout">"logout "</string>
    <string name="welcome_to_signup">Sign up and enjoy a new world of chefs including you!</string>
    <string name="welcome_to_signup2">chefs including you!</string>
    <string name="user_name">User Name</string>
    <string name="donot_have_an_account">Don’t have an account? </string>
    <string name="signup_now">Sign up now</string>
    <string name="confirm_password">Retype Password</string>
    <string name="confirm_privacy">Creating an account means you are okay with our terms of services and our Privacy Policy</string>
    <string name="discount">Discounts</string>
    <string name="up_to">up to  </string>
    <string name="date_discount">17 - 24 January</string>
    <string name="Breakfast">Breakfast</string>
    <string name="pic_your_meal">Pick your meal</string>
    <string name="Most_viewed_chefs">Most viewed chefs</string>
    <string name="ratio">  30%</string>
    <string name="account_settings">Account setting</string>
    <string name="user_nick_name">\@UserName</string>
    <string name="privacy">TERMS AND CONDITIONS Welcome to our meal kit application. These terms and conditions (“Terms”) govern your use of our application and the services we provide through it. By using our application, you agree to be bound by these Terms. If you do not agree with these Terms, you may not use our application. Service Description Our meal kit application provides you with the ability to order meal kits that are delivered to your door. We offer a variety of meal plans, dietary options, and delivery schedules to choose from. Our service is provided on a subscription basis, and you will be charged on a recurring basis for your selected meal plan. Account Registration To use our application, you must register for an account with us. You must provide accurate and complete information during the registration process, including your name, email address, and payment information. You are responsible for maintaining the confidentiality of your account login information and for any activity that occurs under your account. Payment By registering for our service, you agree to pay the subscription fees associated with your selected meal plan. Payment will be charged to your chosen payment method on a recurring basis. You may cancel your subscription at any time, but we do not offer refunds for any fees already paid. Intellectual Property Our meal kit application and all content and materials contained within it are owned or licensed by us and are protected by copyright and other intellectual property laws. You may not use our content or materials for any purpose without our prior written consent. User Conduct You may not use our meal kit application for any illegal or unauthorised purpose. You must comply with all applicable laws and regulations. You may not use our application to harass, defame, or discriminate against any other user. Disclaimer of Warranties Our meal kit application is provided on an “as is” and “as available” basis. We do not make any representations or warranties of any kind, express or implied, regarding the use or the results of our application in terms of its correctness, accuracy, reliability, or otherwise. Limitation of Liability In no event shall we be liable for any indirect, incidental, special, punitive, consequential damages or any damages whatsoever arising out of or in connection with your use of our meal kit application. Damage and Spoiled Food in Meal Kit Delivery Our meal kit delivery is handled by third-party suppliers, and while we take all reasonable steps to ensure that your meal kit arrives in good condition, we cannot be held responsible for any damage or spoiled food that occurs during delivery. If your meal kit arrives damaged or with spoiled food, please contact us as soon as possible and we will work with our suppliers to resolve the issue. We may offer a replacement or refund, at our discretion. Changes to Terms and Conditions We reserve the right to modify these Terms at any time. We will provide notice of any material changes to these Terms on our application. Your continued use of our application after such notice constitutes your agreement to the modified Terms. Governing Law These Terms and your use of our meal kit application shall be governed by and construed in accordance with the laws of the jurisdiction in which we operate.</string>
    <string name="editProfile">Edit profile</string>
    <string name="nick_name">Nick Name</string>
    <string name="update_password">Update Password</string>
    <string name="retry_password">Retype Password</string>
    <string name="save">Save</string>
    <string name="Meal_month">Meal of \n the month</string>
    <string name="Meal_name">"meal name "</string>

</resources>