<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/videoFragment"
        android:icon="@drawable/home_selctor"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/search_selctor"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/post_selctor"
        android:title="@string/post"/>
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/chat_selctor"
        android:title="@string/message"/>

    <item
        android:id="@+id/profileFragmentFragment"
        android:icon="@drawable/profile_selctor"
        android:title="@string/profile" />


</menu>