<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_bk"
    android:scrollbars="none"
    tools:context=".presentation.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/chefs"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hub"
            android:textAllCaps="true"
            android:textColor="@color/yellow"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/singup_to_see_nmore_videos"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/your_email_or_your_phone"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            style="@style/styleInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:elevation="1dp"
            app:boxBackgroundMode="none"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_10_white"
                android:backgroundTint="@color/white"
                android:elevation="0dp"

                android:hint="youremail@gure.com"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:minLines="2"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="0dp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email" />

        <TextView
            android:id="@+id/tv_label_forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_password"
            app:layout_constraintHorizontal_bias=".6"
            app:layout_constraintTop_toTopOf="@+id/tv_label_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_password"
            style="@style/styleInputLayout"
            android:layout_width="match_parent"
            app:errorEnabled="true"

            app:errorTextColor="@color/red"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:backgroundTint="@null"
            app:boxBackgroundMode="none"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#3F3F4480"
            tools:layout_editor_absoluteX="24dp">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_10_white"
                android:backgroundTint="#F6F6F6"
                android:gravity="center_vertical"
                android:hint="Enter your password"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/materialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_password" />


        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginTop="20dp"
            android:background="#FFFF7E"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="Or continue with"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <ImageView
                android:id="@+id/iv_login_google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_google_login" />

            <ImageView
                android:id="@+id/iv_login_facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_face_login" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>