<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_splash"
    android:scrollbars="none"
    tools:context=".presentation.login.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">


        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hub"
            android:visibility="gone"
            android:textAllCaps="true"
            android:textColor="@color/yellow"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/skip"
            app:layout_constraintTop_toTopOf="@id/skip" />

<!--        <TextView-->
<!--            android:id="@+id/textView3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="42dp"-->
<!--            android:lineSpacingExtra="2dp"-->
<!--            android:lines="1"-->
<!--            android:text="@string/hi_and"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="30sp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/skip" />-->

        <TextView
            android:id="@+id/welcome_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:textStyle="normal"
            android:lineSpacingExtra="2dp"
            android:lines="1"
            android:text="@string/welcome_to_signup"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/skip" />

        <TextView
            android:id="@+id/chefs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:lines="1"
            android:text="@string/welcome_to_signup2"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_to" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/your_email_or_your_phone"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chefs" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            style="@style/styleInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:elevation="1dp"
            app:boxBackgroundMode="none"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_10_white"
                android:backgroundTint="@color/white"
                android:elevation="0dp"
                android:gravity="center_vertical"
                android:hint="youremail@gure.com"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/user_name"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            style="@style/styleInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:elevation="1dp"
            app:boxBackgroundMode="none"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/name">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_10_white"
                android:backgroundTint="@color/white"
                android:elevation="0dp"
                android:gravity="center_vertical"
                android:hint="Full name"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_password"
            style="@style/styleInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:backgroundTint="@null"
            app:boxBackgroundMode="none"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#3F3F4480"
            tools:layout_editor_absoluteX="24dp">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_10_white"
                android:backgroundTint="#F6F6F6"
                android:gravity="center_vertical"
                android:hint="Enter your password"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/tv_label_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/confirm_password"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_password" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_confirm_password"
            style="@style/styleInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:backgroundTint="@null"
            app:boxBackgroundMode="none"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_confirm_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#3F3F4480"
            tools:layout_editor_absoluteX="24dp">

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_10_white"
                android:backgroundTint="#F6F6F6"
                android:gravity="center_vertical"
                android:hint="Enter your password"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/confirm_privacy"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_confirm_password" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/materialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/privacy" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#FFFF"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="or signup with"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <ImageView
                android:id="@+id/iv_login_google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_google_login" />

            <ImageView
                android:id="@+id/iv_login_facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_face_login" />

            <ImageView
                android:id="@+id/iv_login_tic_toc"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_tic_toc" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>